[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/UI/1x/arrowUp.png" type="Texture" id=1]
[ext_resource path="res://Sprites/UI/1x/arrowRight.png" type="Texture" id=2]
[ext_resource path="res://Sprites/UI/1x/arrowDown.png" type="Texture" id=3]
[ext_resource path="res://Sprites/UI/1x/arrowLeft.png" type="Texture" id=4]
[ext_resource path="res://Scripts/TouchControls.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 20 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 20, 20 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 20, 20 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 20, 20 )

[node name="TouchControls" type="Node2D"]
modulate = Color( 1, 1, 1, 0.470588 )
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 5 )

[node name="TouchScreenButtonUp" type="TouchScreenButton" parent="."]
position = Vector2( -10.6667, -55.3333 )
normal = ExtResource( 1 )
shape = SubResource( 1 )

[node name="TouchScreenButtonDown" type="TouchScreenButton" parent="."]
position = Vector2( -10.6667, -5.33333 )
normal = ExtResource( 3 )
shape = SubResource( 2 )

[node name="TouchScreenButtonLeft" type="TouchScreenButton" parent="."]
position = Vector2( -60.6667, -5.33333 )
normal = ExtResource( 4 )
shape = SubResource( 3 )

[node name="TouchScreenButtonRight" type="TouchScreenButton" parent="."]
position = Vector2( 39.3333, -5.33333 )
normal = ExtResource( 2 )
shape = SubResource( 4 )
[connection signal="pressed" from="TouchScreenButtonUp" to="." method="_on_TouchScreenButtonUp_pressed"]
[connection signal="released" from="TouchScreenButtonUp" to="." method="_on_TouchScreenButtonUp_released"]
[connection signal="pressed" from="TouchScreenButtonDown" to="." method="_on_TouchScreenButtonDown_pressed"]
[connection signal="released" from="TouchScreenButtonDown" to="." method="_on_TouchScreenButtonDown_released"]
[connection signal="pressed" from="TouchScreenButtonLeft" to="." method="_on_TouchScreenButtonLeft_pressed"]
[connection signal="released" from="TouchScreenButtonLeft" to="." method="_on_TouchScreenButtonLeft_released"]
[connection signal="pressed" from="TouchScreenButtonRight" to="." method="_on_TouchScreenButtonRight_pressed"]
[connection signal="released" from="TouchScreenButtonRight" to="." method="_on_TouchScreenButtonRight_released"]
